--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -4,22 +4,22 @@
     <item
         android:id="@+id/page_1"
         android:enabled="true"
-        android:icon="@drawable/common_google_signin_btn_icon_dark_focused"
+        android:icon="@drawable/home"
         tools:ignore="MenuTitle" />
     <item
         android:id="@+id/page_2"
         android:enabled="true"
-        android:icon="@drawable/ic_launcher_background"
+        android:icon="@drawable/search"
         tools:ignore="MenuTitle" />
 
     <item
         android:id="@+id/page_3"
         android:enabled="true"
-        android:icon="@drawable/common_google_signin_btn_icon_dark_focused"
+        android:icon="@drawable/star"
         tools:ignore="MenuTitle" />
     <item
         android:id="@+id/page_4"
         android:enabled="true"
-        android:icon="@android:drawable/star_big_on"
+        android:icon="@drawable/calendar"
         tools:ignore="MenuTitle" />
 </menu>
