--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -28,7 +28,7 @@
 
             <!-- Image -->
             <ImageView
-                android:id="@+id/img"
+                android:id="@+id/imgbtn"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:scaleType="centerCrop"
