--- a/app/src/main/res/layout/test4.xml
+++ b/app/src/main/res/layout/test4.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ingredientRow"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
@@ -28,7 +29,7 @@
 
             <!-- Image -->
             <ImageView
-                android:id="@+id/img"
+                android:id="@+id/imgbtn"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:scaleType="centerCrop"
