--- a/app/src/main/res/layout/fragment_calender.xml
+++ b/app/src/main/res/layout/fragment_calender.xml
@@ -5,14 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <CalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+    <DatePicker
+        android:id="@+id/datePicker2"
+        android:layout_width="331dp"
+        android:layout_height="404dp"
+        android:layout_marginTop="28dp"
         android:background="#F69C9C"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recPlaned"
+        android:layout_width="405dp"
+        android:layout_height="296dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/datePicker2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
