--- a/app/src/main/res/layout/test3.xml
+++ b/app/src/main/res/layout/test3.xml
@@ -6,8 +6,8 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="350dp"
-        android:layout_height="54dp"
+        android:layout_width="394dp"
+        android:layout_height="93dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
@@ -28,8 +28,8 @@
             <!-- Image -->
             <ImageView
                 android:id="@+id/imgbtn"
-                android:layout_width="92dp"
-                android:layout_height="43dp"
+                android:layout_width="wrap_content"
+                android:layout_height="73dp"
                 android:scaleType="centerCrop"
                 app:srcCompat="@drawable/ic_launcher_background" />
 
