Make Countries with flages to search bar

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#C2D1C5"
     tools:context=".homepage.view.HomeFragment">
 
     <!-- Wrap everything in a NestedScrollView for scroll functionality -->
@@ -23,7 +23,7 @@
                 android:layout_width="206dp"
                 android:layout_height="235dp"
                 android:layout_margin="8dp"
-                android:background="#D96767"
+                android:background="#C2D1C5"
                 app:layout_constraintBottom_toTopOf="@id/recView2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.45"
@@ -35,7 +35,7 @@
                 android:id="@+id/recView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#D96767"
+                android:background="#C2D1C5"
                 app:layout_constraintBottom_toTopOf="@id/recView3"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/recView" />
@@ -45,7 +45,7 @@
                 android:id="@+id/recView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#D96767"
+                android:background="#C2D1C5"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/recView2" />
