--- a/app/src/main/res/drawable/bg_bottom_navigation.xml
+++ b/app/src/main/res/drawable/bg_bottom_navigation.xml
@@ -5,7 +5,7 @@
     android:shape="rectangle">
 
     <!-- Background color -->
-    <solid android:color="#FD978D" />
+    <solid android:color="#4CAF50" />
 
     <!-- Top corners carved (make them rounded to simulate carving) -->
     <corners android:topLeftRadius="40dp" android:topRightRadius="40dp" />
