--- a/app/src/main/res/layout/fragment_meal.xml
+++ b/app/src/main/res/layout/fragment_meal.xml
@@ -13,17 +13,18 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="348dp"
+            android:layout_height="292dp"
             android:layout_margin="30dp"
             app:backgroundColor="@android:color/transparent"
             app:cardElevation="4dp"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="33dp">
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_width="286dp"
+                android:layout_height="218dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:scaleType="fitCenter"
@@ -98,34 +99,49 @@
             app:layout_constraintTop_toBottomOf="@+id/textView6"
             app:layout_constraintVertical_bias="0.0" />
 
+        <!--        <Button-->
+<!--            android:id="@+id/btnFav"-->
+<!--            android:layout_width="67dp"-->
+<!--            android:layout_height="48dp"-->
+<!--            android:layout_marginStart="36dp"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:text="Button"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/cardView" />-->
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rec2"
             android:layout_width="400dp"
             android:layout_height="229dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="124dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.454"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2"
             tools:listitem="@layout/test4" />
 
-        <Button
+        <ImageButton
             android:id="@+id/btnFav"
-            android:layout_width="67dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="8dp"
-            android:text="Button"
+            android:layout_width="99dp"
+            android:layout_height="65dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:background="?attr/selectableItemBackground"
+            android:src="@drawable/heart_outline"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardView" />
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <ImageButton
             android:id="@+id/imgbtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="200dp"
-            android:layout_marginTop="20dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginStart="192dp"
+            android:layout_marginTop="28dp"
+            android:background="?attr/selectableItemBackground"
+            android:scaleType="centerInside"
             app:layout_constraintStart_toEndOf="@+id/btnFav"
-            app:layout_constraintTop_toBottomOf="@+id/cardView"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
             app:srcCompat="@drawable/calendar" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
