--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,19 +7,25 @@
 
     <SearchView
         android:id="@+id/searchView"
-        android:layout_width="408dp"
+        android:layout_width="match_parent"
         android:layout_height="72dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="4dp"
         android:queryHint="Enter Meal Name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
-        android:layout_width="409dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="46dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchView">
+        app:layout_constraintTop_toBottomOf="@+id/searchView"
+        app:tabIconTint="#12ca3e"
+        app:tabIndicatorColor="#12ca3e"
+        app:tabRippleColor="#12ca3e"
+        app:tabSelectedTextColor="@color/black">
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/mealTab"
@@ -29,7 +35,7 @@
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/countryTab"
-            android:layout_width="wrap_content"
+            android:layout_width="15dp"
             android:layout_height="wrap_content"
             android:text="Country" />
 
@@ -48,8 +54,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recView4"
-        android:layout_width="409dp"
-        android:layout_height="581dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
