--- a/app/src/main/res/layout/circle.xml
+++ b/app/src/main/res/layout/circle.xml
@@ -6,17 +6,14 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="340dp"
-        android:layout_height="93dp"
-        android:layout_marginStart="10dp"
+        android:layout_width="100dp"
+        android:layout_height="130dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="10dp"
         android:layout_marginBottom="20dp"
-        app:cardCornerRadius="12dp"
+        app:cardCornerRadius="70dp"
         app:cardElevation="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -24,22 +21,25 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
+            android:orientation="vertical"
+            android:gravity="center"
             android:padding="8dp">
 
             <!-- Image -->
+
+            <!-- Text -->
+
             <ImageView
                 android:id="@+id/imgbtn"
-                android:layout_width="wrap_content"
-                android:layout_height="73dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:scaleType="centerCrop"
                 app:srcCompat="@drawable/ic_launcher_background" />
 
-            <!-- Text -->
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="258dp"
-                android:layout_height="54dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:paddingTop="8dp"
                 android:text="TextView"
