--- a/app/src/main/res/layout/test4.xml
+++ b/app/src/main/res/layout/test4.xml
@@ -7,49 +7,52 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="178dp"
-        android:layout_height="229dp"
-        android:layout_marginStart="10dp"
+        android:layout_width="100dp"
+        android:layout_height="170dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        app:cardCornerRadius="8dp"
+        app:cardCornerRadius="70dp"
         app:cardElevation="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <!-- Use a LinearLayout to stack ImageView and TextView vertically -->
+        <!-- Use a LinearLayout to stack TextView and ImageView vertically -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:gravity="center"
             android:padding="8dp">
 
-            <!-- Image -->
-            <ImageView
-                android:id="@+id/imgbtn"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/ic_launcher_background" />
-
-            <!-- Text -->
+            <!-- TextView at the top of the card -->
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:paddingTop="8dp"
-                android:text="TextView"
-                android:textStyle="bold" />
+                android:paddingBottom="8dp"
+                android:text="Top TextView"
+                android:textStyle="bold"
+                android:gravity="center" />  <!-- Center text within TextView -->
 
+            <ImageView
+                android:id="@+id/imgbtn"
+                android:layout_width="70dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/ic_launcher_background" />
+
+            <!-- Second TextView below the ImageView -->
             <TextView
                 android:id="@+id/textView10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:paddingBottom="8dp"
+                android:text="Bottom TextView"
+                android:gravity="center" />  <!-- Center text within TextView -->
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
